@@ -45,8 +45,33 @@ public class SecurityConfig {
             .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers(HttpMethod.POST, "/api/auth/login", "/api/auth/register").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/skills/interpret").permitAll()
                 .requestMatchers("/api/auth/google/**").permitAll()
+                // WebSocket handshake endpoints (SockJS negotiation)
+                .requestMatchers("/ws/**", "/ws/info").permitAll()
+                // Static uploads
+                .requestMatchers("/uploads/**").permitAll()
+                // Public read-only routes — skills catalogue and community browsing
+                .requestMatchers(HttpMethod.GET, "/api/skills", "/api/skills/**").permitAll()
+                .requestMatchers(HttpMethod.GET,
+                    "/api/community/events",
+                    "/api/community/events/**",
+                    "/api/community/discussions",
+                    "/api/community/discussions/**",
+                    "/api/community/posts",
+                    "/api/community/posts/**",
+                    "/api/community/stories",
+                    "/api/community/skill-circles",
+                    "/api/community/skill-circles/**"
+                ).permitAll()
                 .anyRequest().authenticated()
+            )
+            .exceptionHandling(ex -> ex
+                .authenticationEntryPoint((request, response, authException) -> {
+                    response.setContentType("application/json");
+                    response.setStatus(401);
+                    response.getWriter().write("{\"success\":false,\"message\":\"Unauthorized\"}");
+                })
             )
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -61,14 +86,23 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        List<String> origins = Arrays.asList(allowedOriginsRaw.split(","));
-        config.setAllowedOrigins(origins);
+        // Use allowedOriginPatterns — required in Spring 6 when allowCredentials is true.
+        // It supports exact origins as well as glob patterns (e.g. "http://localhost:*").
+        List<String> patterns = Arrays.stream(allowedOriginsRaw.split(","))
+            .map(String::trim)
+            .filter(s -> !s.isEmpty())
+            .toList();
+        config.setAllowedOriginPatterns(patterns.isEmpty() ? List.of("*") : patterns);
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization"));
         config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/api/**", config);
+        source.registerCorsConfiguration("/ws/**", config);
+        source.registerCorsConfiguration("/uploads/**", config);
         return source;
     }
 }
